--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/react": "16.8.13",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
