--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
     "bootstrap": "^4.3.1",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
